--- a/Fishing Webpage (html, css)/index.html
+++ b/Fishing Webpage (html, css)/index.html
@@ -31,7 +31,8 @@
        So cast your line, embrace</p>
      
 </body>
-<form  class="form-container">
+<script src="fishingScript.js"></script>
+<form id="myForm" class="form-container">
 
     <h1 id="reg">REGISTER</h1>
 
@@ -71,7 +72,7 @@
     <br>
     <div class="container">
         <a>
-            <button style="background-color: black; color: greenyellow" title="Submit Details">Submit</button>
+            <button id="submit" style="background-color: black; color: greenyellow" title="Submit Details">Submit</button>
         </a>
         <a id="page2" href="page 2.html" target="_self" title="Press Welcome" class="welcome-link">
             Welcome!!!
