upd to do list project

--- a/To do List Project/index.html
+++ b/To do List Project/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>To Do List</h1>
+    <h1>📝 To Do List  </h1>
     <div class ="input_container">
     <input type="text" id="taskInput" placeholder="Enter a new task">
     <button id = "add_task" onclick="addTask()">Add Task</button>
