--- a/To do List Project/index.html
+++ b/To do List Project/index.html
@@ -10,7 +10,7 @@
     <h1>📝 To Do List  </h1>
     <div class ="input_container">
     <input type="text" id="taskInput" placeholder="Enter a new task">
-    <button id = "add_task" onclick="addTask()">Add </button>
+    <button  onclick="addTask()">Add </button>
 </div>
     <ul id="taskList"></ul>
     
