add delete all button

--- a/To do List Project/index.html
+++ b/To do List Project/index.html
@@ -12,12 +12,14 @@
     <div class ="input_container">
     <input type="text" id="taskInput" placeholder="Enter a new task">
     <button id ="addbutton" class="btn" onclick="addTask()">Add </button>
+    
 </div>
     <ul id="taskList"></ul>
 <div>
     <hr class="counter" />
     <div class="counter-container">
     <p><span id ="taskCount">0</span> items total</p>
+    <button id="deleteAllButton" class="btn" >Delete All</button>
     </div>
 </div>
 </section>
