--- a/To do List Project/index.html
+++ b/To do List Project/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <section>
-    <h1>📝 To Do List  </h1>
-    <div class ="input_container">
+    <h1 id="flash">📝 To Do List  </h1>
+    <section class="container">
+    <div class ="input-container">
     <input type="text" id="taskInput" placeholder="Enter a new task">
     <button id ="addbutton" class="btn" onclick="addTask()">Add </button>
     
@@ -22,6 +23,7 @@
     <button id="deleteAllButton" class="btn" >Delete All</button>
     </div>
 </div>
+</section>
 </section>
 
     <script src="to_do_list.js"></script>
