--- a/To do List Project/index.html
+++ b/To do List Project/index.html
@@ -1,30 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>To_do_list</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <section>
-        <h1 id="flash">📝 To Do List</h1>
-        <section class="container">
-            <div class="input-container">
-                <input type="text" id="taskInput" placeholder="Enter a new task">
-                <button id="addbutton" class="btn" onclick="addTask()">Add</button>
-            </div>
-            <ul id="taskList"></ul>
-            <div>
-                <hr class="counter" />
-                <div class="counter-container">
-                    <p><span id="taskCount">0</span> items total</p>
-                    <button id="deleteAllButton" class="btn">Delete All</button>
-                </div>
-            </div>
-        </section>
+      <h1 id="flash">📝 To Do List</h1>
+      <section class="container">
+        <div class="input-container">
+          <input type="text" id="taskInput" placeholder="Enter a new task" />
+          <button id="addbutton" class="btn" onclick="addTask()">Add</button>
+        </div>
+        <ul id="taskList"></ul>
+        <div>
+          <hr class="counter" />
+          <div class="counter-container">
+            <p><span id="taskCount">0</span> items total</p>
+            <button id="deleteAllButton" class="btn">Delete All</button>
+          </div>
+        </div>
+      </section>
     </section>
     <script src="to_do_list.js"></script>
-</body>
+  </body>
 </html>
-
