--- a/Weather app/index.html
+++ b/Weather app/index.html
@@ -14,25 +14,25 @@
             <button><img src="Images/search-icon-search-icon-design-illustration-search-icon-simple-sign-free-vector.jpg"></button>
         </div>
         <div class="weather">
-            <img src="Images/weather07-512.webp"class ="weather-icon">
-            <h1 class="temp">22°C</h1>
-            <h2 class ="city">Maribor</h2>
+            <img src="Images/cloud.png"class ="weather-icon">
+            <h1 class="temp"></h1>
+            <h2 class ="city"></h2>
             <div class="details">
                 <div class="col">
                     <div>
-                        <p class="humidity"> 50%</p>
+                        <p class="humidity"></p>
                         <p>Humidity</p>
                     </div>
                 </div>
                 <div class="col">
                     <div>
-                        <p class="wind">15 km/h</p>
+                        <p class="wind"></p>
                         <p>Wind speed</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <script>src="script.js"</script>
+    <script src="script.js"></script>
 </body>
 </html>
