--- a/Weather app/index.html
+++ b/Weather app/index.html
@@ -11,20 +11,25 @@
     <div class="card">
         <div class="search">
             <input type="text" placeholder="Enter city name" spellcheck="false">
-            <button><img src="Images/search-icon-search-icon-design-illustration-search-icon-simple-sign-free-vector.jpg"></button>
+            <button><img src="Images/magnifying-glass.png"></button>
+        </div>
+        <div class="error">
+            <p>Invalid City Name</p>
         </div>
         <div class="weather">
-            <img src="Images/cloud.png"class ="weather-icon">
+            <img src="Images/cloudy.png"class ="weather-icon">
             <h1 class="temp"></h1>
             <h2 class ="city"></h2>
             <div class="details">
                 <div class="col">
+                    <img src="Images/humidity.png">
                     <div>
                         <p class="humidity"></p>
                         <p>Humidity</p>
                     </div>
                 </div>
                 <div class="col">
+                    <img src="Images/wind.png">
                     <div>
                         <p class="wind"></p>
                         <p>Wind speed</p>
