upd fishing trips

--- a/Fishing Project/index.html
+++ b/Fishing Project/index.html
@@ -57,11 +57,15 @@
           </select>
 
           <input type="number" id="weight" placeholder="Weight (kg)" />
+          <input type="text" id="bait" placeholder="Bait" />
           <button id="addTrip">Add Trip</button>
         </div>
 
         <h2>Fishing Trips 📝</h2>
         <ul id="tripList"></ul>
+        <div>
+          <p>Total trips: <span id="tripCount">0 </span> </p>
+        </div>
         <button id="clearTrips" class="delete-all">Clear All Trips</button>
       </div>
 
