uploade image function created

--- a/Fishing Project/index.html
+++ b/Fishing Project/index.html
@@ -46,6 +46,8 @@
 
                 <input type="number" id="weight" placeholder="Weight (kg)" />
                 <input type="text" id="bait" placeholder="Bait" />
+                <label for="imageUpload" class="custom-file-upload">Optional Upload Picture</label>
+                <input type="file" id="imageUpload"  accept="image/*" />
                 <button id="addTrip">Add Trip</button>
             </div>
 
