create popup for display image

--- a/Fishing Project/index.html
+++ b/Fishing Project/index.html
@@ -144,6 +144,13 @@
         </div>
     </div>
 
+    <!-- Image Popup container -->
+    <div id="imagePopup" class="popup-container">
+        <span id="closeImagePopup" class="close-btn">&times;</span>
+        <img id="popupImage" class="popup-image" src="" alt="Fish Image">
+      </div>
+      
+
     <script src="scriptFishing.js"></script>
 </body>
 
